--- a/indext.html
+++ b/indext.html
@@ -85,15 +85,15 @@
             <div class="side-bar-home">
                 <i class="side-bar-icon fa-solid fa-road"
                     style="margin-top: 20px;margin-bottom: 0.6vw;font-size: 1.54vw;"></i>
-                    <div class="text" style="margin-bottom: 1vw;"><span>Lộ trình</span></div>
+                <div class="text" style="margin-bottom: 1vw;"><span>Lộ trình</span></div>
             </div>
-           
+
             <div class="side-bar-home">
                 <i class="side-bar-icon fa-solid fa-medal"
                     style="margin-top: 20px;margin-bottom: 0.6vw;font-size: 1.54vw;"></i>
-                    <div class="text"><span>Thi đấu</span></div>
+                <div class="text"><span>Thi đấu</span></div>
             </div>
-          
+
         </section>
         <section class="banner1">
             <section class="banner2">
@@ -527,13 +527,13 @@
                     </div>
                 </section>
             </div>
-
+        </section>
     </div>
 
     <!-- Footer -->
     <footer class="footer">
         <div class="total-footer">
-            <div class="logo">
+            <div class="logo-ft">
                 <div class="logo-img">
                     <img src="/img/logo-fpt-footer.svg" alt="#" class="logo-fpt">
                 </div>
