--- a/indext.html
+++ b/indext.html
@@ -147,7 +147,7 @@
                             </div>
                             <div class="course2">
                                 <div class="course-name">
-                                    <span class="course-text">Khóa học</span>
+                                    <span class="course-text">Thứ hạng tốt nhất</span>
                                 </div>
                                 <div class="course-total">
                                     <div class="course-number">
