--- a/indext.html
+++ b/indext.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="/tablet.css">
     <link rel="stylesheet" href="/mobile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -17,7 +22,7 @@
     <!-- Header -->
     <header class="header">
         <div class="logo">
-            <img src="/img/logo-fpt-footer.svg" alt="#" class="logo-fb">
+            <img src="/img/logo-fpt-footer 1.png" alt="#" class="logo-fb">
         </div>
         <div class="search-container">
             <input type="text" class="search-bars" placeholder="Tìm kiếm khóa học">
@@ -188,11 +193,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -207,11 +212,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -228,11 +233,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -247,11 +252,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -266,11 +271,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -285,11 +290,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-prices"><del>400.000</del> <span
@@ -302,11 +307,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -318,11 +323,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -334,11 +339,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-price">miễn phí</div>
@@ -350,11 +355,11 @@
                         </div>
                         <div class="course-author">Anh02</div>
                         <div class="course-star">
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
-                            <i class="course-star-icon fa-solid fa-star"></i>
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             <span class="number-star">5.0</span>
                         </div>
                         <div class="course-prices"><del>3.299.000</del> <span
@@ -376,11 +381,11 @@
                                 <div class="skill-text">C++</div>
                             </div>
                             <div class="skill-star">
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             </div>
                         </div>
                         <div class="skill-list">
@@ -391,11 +396,11 @@
                                 <div class="skill-text">JS</div>
                             </div>
                             <div class="skill-star">
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             </div>
                         </div>
                         <div class="skill-list">
@@ -406,11 +411,11 @@
                                 <div class="skill-text">Java</div>
                             </div>
                             <div class="skill-star">
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             </div>
                         </div>
                         <div class="skill-list">
@@ -421,11 +426,11 @@
                                 <div class="skill-text">Mysql</div>
                             </div>
                             <div class="skill-star">
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                            <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             </div>
                         </div>
                         <div class="skill-list">
@@ -438,11 +443,11 @@
                                 <div class="skill-text">Node</div>
                             </div>
                             <div class="skill-star">
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
-                                <i class="course-star-icon fa-solid fa-star"></i>
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
+                                <img src="/img/Star 6.png" alt="#" class="course-star-icon">
                             </div>
                         </div>
                     </div>
@@ -535,12 +540,12 @@
         <div class="total-footer">
             <div class="logo-ft">
                 <div class="logo-img">
-                    <img src="/img/logo-fpt-footer.svg" alt="#" class="logo-fpt">
+                    <img src="/img/logo-fpt-footer 2.png" alt="#" class="logo-fpt">
                 </div>
                 <div class="describe">
-                    Là nền tảng tương tác trực tuyến <br> hỗ trợ người dùng học tập,<br> thực hành, thi đấu và <br>đánh
+                    Là nền tảng tương tác trực tuyến hỗ<br>  trợ người dùng học tập, thực hành,<br> thi đấu và đánh
                     giá kỹ năng
-                    lập trình một cách<br> nhanh chóng và chính xác.
+                    lập trình<br> một cách nhanh chóng và chính xác.
                 </div>
                 <div class="contact">
                     <i class="contact-fb fa-brands fa-facebook"></i>
