--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FPT</title>
     <link rel="icon" type="image/x-icon" href="/img/logo-fpt-footer.svg" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/tablet.css" />
-    <link rel="stylesheet" href="/mobile.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="tablet.css" />
+    <link rel="stylesheet" href="mobile.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
