--- a/index.html
+++ b/index.html
@@ -27,24 +27,27 @@
                     <input type="text" class="search-bars" placeholder="Tìm kiếm khóa học" />
                     <i class="search-container-icon fa fa-search search-icon"></i>
                 </div>
+                <img class="img-bar" src="/img/bars-solid 1.png" alt="#">
             </div>
+
             <div class="user-options">
                 <span class="user-text">Khóa học của tôi</span>
                 <img src="/img/img-bell.png" alt="#">
                 <img src="/img/cart-img.png" alt="#">
                 <img src="/img/Vector-img.png" alt="#">
             </div>
+
         </header>
 
         <!-- Thanh điều hướng màn mobile -->
-        <!-- <div class="header-mobile">
+        <div class="header-mobile">
             <div class="bag-total">
                 <div class="total-bag">
                     <div class="side-bar-home">
                         <i class="icon fa-solid fa-house" style="
                     margin-bottom: 0.6vw;
                     position: relative;
-                    font-size: 3.54vw;
+                    font-size: 13px;
                   "></i>
                         <div class="text"><span>Trang chủ</span></div>
                     </div>
@@ -52,17 +55,17 @@
             </div>
             <div class="side-bar-total">
                 <div class="side-bar-home">
-                    <i class="side-bar-icon fa-solid fa-road" style="margin-bottom: 0.6vw; font-size: 3.54vw"></i>
+                    <i class="side-bar-icon fa-solid fa-road" style="margin-bottom: 0.6vw; font-size: 13px"></i>
                     <div class="text"><span>Lộ trình</span></div>
                 </div>
             </div>
             <div class="side-bar-total">
                 <div class="side-bar-home">
-                    <i class="side-bar-icon fa-solid fa-medal" style="margin-bottom: 0.6vw; font-size: 3.54vw"></i>
+                    <i class="side-bar-icon fa-solid fa-medal" style="margin-bottom: 0.6vw; font-size: 13px"></i>
                     <div class="text"><span>Thi đấu</span></div>
                 </div>
             </div>
-        </div> -->
+        </div>
         <!-- Banner -->
         <div class="container">
             <section class="side-bar">
@@ -496,7 +499,7 @@
         </div>
         <!-- Footer -->
         <footer class="footer">
-            <!-- <div class="total-footer">
+            <div class="total-footer">
                 <div class="logo-ft">
                     <div class="logo-img">
                         <img src="/img/logo-fpt-footer 2.png" alt="#" class="logo-fpt" />
@@ -539,8 +542,8 @@
                         <div class="instruct">Điều khoản sử dụng</div>
                     </div>
                 </div>
-            </div> -->
-            <div class="total-footer">
+            </div>
+            <!-- <div class="total-footer">
                 <div class="logo-ft">
                     <div class="logo-img">
                         <img src="/img/logo-fpt-footer 2.png" alt="#" class="logo-fpt" />
@@ -571,6 +574,7 @@
                     <div class="instruct">Luyện tập</div>
                     <div class="instruct">Thi đấu</div>
                 </div>
+                <br>
                 <div class="cares">
                     <div class="care">Trợ giúp</div>
                     <div class="instruct">Trợ giúp</div>
@@ -581,7 +585,7 @@
                     <div class="instruct">Về chúng tôi</div>
                     <div class="instruct">Điều khoản sử dụng</div>
                 </div>
-            </div>
+            </div> -->
         </footer>
     </div>
 </body>
