--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                         <i class="icon fa-solid fa-house" style="
                     margin-bottom: 0.6vw;
                     position: relative;
-                    font-size: 13px;
-                  "></i>
+                    font-size: 13px;"></i>
                         <div class="text"><span>Trang chủ</span></div>
                     </div>
                 </div>
