--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <!-- Header -->
         <header class="header">
             <div class="header_search">
-                <img src="/img/logo-fpt-footer 1.png" alt="#" class="logo-fb" />
+                <img src="./img/logo-fpt-footer 1.png" alt="#" class="logo-fb" />
                 <div class="search-container">
                     <input type="text" class="search-bars" placeholder="Tìm kiếm khóa học" />
                     <i class="search-container-icon fa fa-search search-icon"></i>
